# atem-ip-patchbay

./: .gitignore  CLAUDE.md  LICENSE  README.md  probe.py  run.py
.github/workflows/: ci.yml  release.yml
bmd_emulator/: __init__.py  device_scanner.py  discover.py  ffmpeg_path.py  netinfo.py  paste_parser.py  protocol.py  sources.py  state.py  streamer.py  streamid.py  web.py  xml_loader.py
bmd_emulator/static/: app.js  index.html  style.css
config/: example.xml
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/sidecar/: README.txt
src-tauri/src/: device_scanner.rs  ffmpeg_path.rs  frame_pack.rs  http.rs  instance.rs  lib.rs  main.rs  ndi_capture.rs  ndi_runtime.rs  omt_capture.rs  omt_runtime.rs  omt_sender.rs  preview.rs  protocol.rs  sources.rs  state.rs  streamer.rs  streamid.rs  xml.rs
tools/atem-net-diag/: .gitignore  Cargo.toml  build-package.sh
tools/atem-net-diag/package/: README.txt  start.command
tools/atem-net-diag/src/: dashboard.html  dashboard.rs  main.rs  unifi.rs
webui/: index.html
