[package]
name = "atem-ip-patchbay"
version = "0.2.0-dev"
description = "Push any video source into Blackmagic ATEM gear over BMD-flavored SRT"
authors = ["Stephen Walter <stephen@weirdmachine.org>"]
license = "MIT"
repository = "https://github.com/amateurmenace/atem-ip-patchbay"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "atem_ip_patchbay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# v0.2.0 Phase 1 — embedded HTTP API + state model
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time", "process", "io-util"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "trace"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
roxmltree = "0.20"
local-ip-address = "0.6"

# v0.2.0 Phase 2 — device scanning + source factories
regex = "1"
once_cell = "1"
which = "6"
