[package]
name = "atem-ip-patchbay"
version = "0.2.0-alpha.11"
description = "Push any video source into Blackmagic ATEM gear over BMD-flavored SRT"
authors = ["Stephen Walter <stephen@weirdmachine.org>"]
license = "MIT"
repository = "https://github.com/amateurmenace/atem-ip-patchbay"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "atem_ip_patchbay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# v0.2.0 Phase 1 — embedded HTTP API + state model
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time", "process", "io-util"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "trace", "set-header"] }
tower = "0.5"
tower-layer = "0.3"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
roxmltree = "0.20"
local-ip-address = "0.6"

# v0.2.0 Phase 2 — device scanning + source factories
regex = "1"
once_cell = "1"
which = "6"

# v0.2.0 Phase 4 — NDI direct ingest (NewTek NDI 6 SDK bindings).
# Loads /usr/local/lib/libndi.dylib at runtime via dlopen — the
# binary doesn't link against libndi statically, so machines without
# NDI Tools installed will get a clear runtime error instead of
# failing to launch. Phase 4 ships libndi.dylib in
# Contents/Frameworks/ via bundle.macOS.frameworks (added in Phase 9
# for CI; manual copy works for now on this Mac since the dylib is
# already at /usr/local/lib).
grafton-ndi = { version = "0.11", features = ["image-encoding"] }
libc = "0.2"

# v0.2.0 Phase 6 — multi-instance launcher
clap = { version = "4", features = ["derive"] }
dirs = "5"

# v0.2.0-alpha.9 — OMT (Open Media Transport) support behind a
# feature flag. The libomt crate vendors its own bindgen against
# libomt.h but DOES need libomt.dylib at link time
# (vendor/libomt/<os>/libomt.<ext> by default, override via
# LIBOMT_PATH). Not all CI runners or end-user machines have that
# yet, so OMT is opt-in for now: build with `--features omt` to
# enable. The omt_runtime / omt_capture / omt_sender modules
# always exist; their bodies cfg-out to no-ops when the feature is
# off. Future alpha bundles libomt.dylib alongside libndi.dylib
# once distribution is solidified.
[dependencies.libomt]
version = "0.1"
optional = true

[features]
default = []
omt = ["dep:libomt"]
