[package]
name = "atem-net-diag"
version = "0.1.0"
edition = "2021"
description = "ATEM SRT/RTMP reachability + connection-state probe — runs on a peer machine on the same LAN as the ATEM and logs whether it's currently accepting connections"
license = "MIT"

[[bin]]
name = "atem-net-diag"
path = "src/main.rs"

[dependencies]
# Probe + monitor logic uses std-only (shells out to ffmpeg /
# tshark and parses their output). The --ui mode adds a small
# blocking HTTP server (tiny_http, ~30KB) and JSON serialization
# (serde+serde_json) for the live-dashboard API endpoint. Total
# binary still under 5 MB after stripping.
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
