[package]
name = "atem-net-diag"
version = "0.2.2"
edition = "2021"
description = "ATEM network diagnostic — Live (passive UDM polling + tshark capture, default) or Standby (active SRT/RTMP probe). Per-key flow correlation via SRT HSv5 SID extension parsing. Designed for live broadcast monitoring without interfering with the production stream."
license = "MIT"

[[bin]]
name = "atem-net-diag"
path = "src/main.rs"

[dependencies]
# Probe + monitor logic uses std-only (shells out to ffmpeg /
# tshark and parses their output). The --ui mode adds a small
# blocking HTTP server (tiny_http, ~30KB) and JSON serialization
# (serde+serde_json) for the live-dashboard API endpoint. The
# UniFi-API integration adds ureq + rustls for HTTPS calls to the
# UDM (which ships with a self-signed cert by default). Total
# stripped binary stays under ~7 MB.
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# UniFi-API client: ureq for HTTPS, native-tls so we can opt out
# of cert verification per-host (the UDM ships with a self-signed
# cert by default; users don't typically swap it out for a
# real one on a LAN-only controller). cookies feature is needed
# for the local-account login flow (TOKEN cookie + CSRF dance);
# even with API-key auth it's harmless.
ureq = { version = "2", default-features = false, features = ["native-tls", "json", "cookies"] }
native-tls = "0.2"

# Mirror-mode auto-detect: look up this machine's own IPs at startup
# so the monitor loop can classify each captured flow's src_ip as
# "ours" (we're seeing our own outbound, normal even on a switched
# LAN) vs "peer" (we have visibility into other devices' traffic,
# which means we're either on the streamer's machine or a SPAN port).
# Used to surface the "you appear blind to ATEM traffic, set up port
# mirroring" hint when only own-host flows are seen for >30s.
local-ip-address = "0.6"
